--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,6 +23,8 @@
     <div class="matx-loader">
     </div>
   </div>
+  <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
 </body>
 
 </html>
